@@ -1,3 +1,12 @@
+2006-06-14  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* libpam/pam_handlers.c (extract_modulename): Use _pam_strdup
+	instead of strdup.
+
+	* libpam/pam_private.h: Remove _pam_strCMP.
+	* libpam/pam_misc.c: Likewise.
+	* libpam/pam_handlers.c: Replaced _pam_strCMP with strcasecmp.
+
 2006-06-12  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* modules/pam_tally/Makefile.am (AM_LDFLAGS): Remove flags
